# CHAT1

./: ACCEPTANCE_CHECKLIST.md  DESIGN.md  PRD-WireGuard-OneClick.md  README.md  TASKS.md  app.py  image_clarity_desktop.py  image_clarity_desktop.spec  password_notebook.py  pyproject.toml  requirements.txt  wuxia_spire.py
.github/workflows/: ci.yml
app/: __init__.py  main.py
docs/: wuxia_spire.md
installer/: windows_installer.iss
scripts/: acceptance_check.sh  build_exe.sh  e2e_smoke.sh  install_exe.sh
src/wg_ocd/: app.py  cli.py  exceptions.py  settings.py
src/wg_ocd/clients/: __init__.py  service.py
src/wg_ocd/config/: __init__.py  templates.py
src/wg_ocd/firewall/: __init__.py  service.py
src/wg_ocd/installer/: __init__.py  service.py
src/wg_ocd/templates/: client.conf.tpl  server.conf.tpl
src/wg_ocd/utils/: __init__.py  backup.py  command.py  logging_utils.py
src/wg_ocd/wireguard/: __init__.py  service.py
tests/: test_app.py  test_client_service.py  test_config_generation.py  test_image_clarity_desktop.py  test_installer_service.py  test_password_notebook.py  test_wuxia_spire.py
wuxia_spire_web/: game.js  index.html  styles.css
