[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wg-ocd"
version = "0.1.0"
description = "One-click WireGuard VPN deployment CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "wg-ocd maintainers"}
]
dependencies = []

[project.scripts]
wg-ocd = "wg_ocd.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
